[package]
name = "cargo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
futures = "0.3.28"
#datetime = "0.5.2"
mongodb = "2.6.1"
serde  = { version = "1.0.184", optional = true, features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
serde  = { version = "1.0.184", optional = true, features = ["derive"] }
